added acts as taggable on model

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -18,6 +18,10 @@
   <div class="field">
     <%= f.label :content %><br>
     <%= f.text_field :content %>
+  <div class="field">
+    <%= f.label :tag_list, "Tags (seperated by commas)" %><br>
+   <%= f.text_field :tag_list %>
+  </div>
   </div>
   <div class="actions">
     <%= f.submit %>
