...test other tags

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,11 +15,12 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
+
   <div class="field">
     <%= f.label :content %><br>
     <%= f.text_field :content %>
   <div class="field">
-    <%= f.label :tag_list, "Tags (seperated by commas)" %><br>
+   <%= f.label :Tag, "Tags (seperated by commas)" %><br>
    <%= f.text_field :tag_list %>
   </div>
   </div>
