--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,7 +11,7 @@
 </p>
 <p>
   <strong>Tags:</strong>
-  <%= raw @article.content_list.map { |t| link_to t, tag_path(t) }.join(', ') %>
+  <%= raw @article.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %>
 </p>
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
