added week count

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
+  <div id="article_name" class="field">
+    <%= f.label :week_number %><br>
+    <%= f.number_field :week_number %>
+  </div>
   <div class="field">
     <%= f.label :content %><br>
     <%= f.text_field :content %>
