--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>week_number:</strong>
+  <%= @article.week_number %>
+</p
+
+<p>
   <strong>Content:</strong>
   <%= @article.content %>
 </p>
