added lastweeks id in

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,6 +14,11 @@
   <strong>Content:</strong>
   <%= @article.content %>
 </p>
+
+<p>
+  <%= @article.last_articles_tag %>
+</p>
+
 <p>
   <strong>Tags:</strong>
   <%= raw @article.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %>
