--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -11,6 +11,10 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= f.collection_select(:week_id, Week.all, :id, :count) %>
+  </div>
+
   <div id="article_name" class="field">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
